--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top ml-auto">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="img/logo-blanco.png" alt="" width="100" >
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNavAltMarkup">
-        <div class="navbar-nav ms-auto flex-nowrap text-end">
-          <a class="nav-link " href="#Descargar">Descargar</a>
-          <a class="nav-link " href="#Novedades" >Novedades</a>
-          <a class="nav-link " href="#Planes">Planes</a>
-          <a class="nav-link " href="#Nosotros">Sobre Nosotros</a>
-          <a class="nav-link " href="#Informacion">Más Información</a>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top ml-auto">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo-blanco.png" alt="" width="100" >
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto flex-nowrap text-end">
+            <a class="nav-link " href="#Descargar">Descargar</a>
+            <a class="nav-link " href="#Novedades" >Novedades</a>
+            <a class="nav-link " href="#Planes">Planes</a>
+            <a class="nav-link " href="#Nosotros">Sobre Nosotros</a>
+            <a class="nav-link " href="#Informacion">Más Información</a>
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
   <main>
     <section class="sec1" id="Descargar">
@@ -218,9 +220,6 @@
         </form>
       </div>
 
-      <!-- Footer-->
-
-
     </section>
 
   </main>
@@ -228,19 +227,17 @@
 
   <footer class="bg-footer text-white ">
 
-      <!-- Grid container -->
+
       <div class="container-fluid pt-4 pb-1 ">
-        <!--Grid row-->
+
         <div class="row ">
-          <!--Grid column-->
+
           <div class="logo-footer col d-flex justify-content-start">
             <h5 class="text-uppercase">
               <img src="img/logo-blanco.png" alt="" width="150" >
              </h5>
           </div>
-          <!--Grid column-->
 
-          <!--Grid column-->
           <div class="col">
 
             <h5 class="text-uppercase">Redes Sociales</h5>
@@ -260,16 +257,14 @@
                   <img class="logors"  src="img/Logo-Twitter.png" ></img>
                 </a>
 
-                <a href="https://www.instagram.com" target="_blank">
-                  <img class="logors"  src="img/Logo-Instagram.png"></img>
+                <a href="https://www.twitch.tv" target="_blank">
+                  <img class="logors"  src="img/Logo-Twitch.png"></img>
                 </a>
-
               </section>
               <!-- Section: Social media -->
             </div>
-            <!-- Grid container -->
+
           </div>
-          <!--Grid column-->
           <div class="footer-copy col d-flex justify-content-end mt-4">
             <div class="text-end p-1">
               <pre> Privacy Policy      Terms of Service <br>© 2021 Mockup.  All Rights Reserved.</pre>
@@ -278,9 +273,8 @@
 
 
         </div>
-        <!--Grid row-->
+
       </div>
-      <!-- Grid container -->
 
     </footer>
 
