--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
         <div class="row pt-3">
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Aaron.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="">Aaron M.</a> </h2>
+            <h2><a href="#Nosotros">Aaron M.</a> </h2>
           </div>
           <div class="col-lg-4 text-center"></div><!-- /.col-lg-4 -->
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Miriam.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="">Miriam M.</a> </h2>
+            <h2><a href="#Nosotros">Miriam M.</a> </h2>
           </div>
         </div>
 
@@ -158,7 +158,7 @@
           <div class="col-lg-4 text-center"></div>
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Wilfredo.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="">Wilfredo F.</a> </h2>
+            <h2><a href="#Nosotros">Wilfredo F.</a> </h2>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4 text-center"></div>
         </div>
@@ -167,13 +167,13 @@
         <div class="row">
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Damian.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="">Airton D.</a> </h2>
+            <h2><a href="#Nosotros">Airton D.</a> </h2>
           </div>
           <div class="col-lg-4 text-center">
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Cristian.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="">Cristian M.</a> </h2>
+            <h2><a href="#Nosotros">Cristian M.</a> </h2>
           </div>
         </div>
 
