--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <section class="plan-section bg-black" id="Planes">
       <h1 class="titulo d-flex justify-content-center text-light"  >Elige tu plan</h1>
       <div class="container">
-        <div class="row justify-content-center no-gutters">
+        <div class="row  no-gutters">
 
-          <div class="col-md-4 mb-5 mx-3 ">
+          <div class="col d-flex justify-content-center">
             <div class="card h-100 " >
               <div class="card-body text-center ">
                 <h4 class="m-0">Amateur</h4>
@@ -121,7 +121,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 mb-5 mx-3">
+          <div class="col d-flex justify-content-center">
             <div class="card h-100">
               <div class="card-body text-center">
                 <h4 class="text-uppercase m-0">Premium</h4>
@@ -184,9 +184,9 @@
 
     <section class="informacion " id="Informacion">
 
-      <div class="row aling-items-center justify-content-center">
+      <div class="row ">
 
-        <form class="solinfo col-xl-4 mb-5 mx-3 ">
+        <form class="solinfo col ">
           <div class="card mx-auto">
             <div class="card-body mx-auto text-center">
 
