--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="container">
 
         <!-- Featured Project Row-->
-        <div class="row justify-content-center align-items-center no-gutters margen-nov">
+        <div class="row justify-content-center align-items-center no-gutters margen-nov-1">
           <div class="col-xl-6 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="img/GamerAmateur.jpg" alt="" /></div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
@@ -112,8 +112,7 @@
             <div class="card h-100 " >
               <div class="card-body text-center ">
                 <h4 class="m-0">Amateur</h4>
-                <h1>Free</h1>
-                <h4 class="t-vacio">vacio</h4>
+                <h1 class="t-free" >Free</h1>
                 <button type="button">SELECCIONAR</button>
                 <hr class="my-3" />
                 <div class="medium text-black-50">Funciones:<br>- Gamer Amateur<br>- Streamer Amateur<br>- Tips y tares</div>
