--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Gamer Amateur</h1>
               <p class="text-white-50 mb-0">Puedes registrarte y compartir tus logros y videojuegos que juegues para que tengas más posibilidades de pertenecer a equipos profesionales de gaming.</p>
-              <button type="button">Más Información</button>
+              <a href="https://www.youtube.com" target="_blank"><button type="button">Más Información</button></a>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Streamer Amateur</h1>
               <p class="text-white-50 mb-0">Realiza streaming con dos simples pasos y tus directos llegaran a muchas personas. Disfruta y diviértete transmitiendo directos.</p>
-              <button type="button">Más Información</button>
+              <a href="https://www.youtube.com" target="_blank"><button type="button">Más Información</button></a>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="featured-text text-center text-lg-left">
               <h1 class="text-white mb-0">Tips y Tareas</h1>
               <p class="text-white-50 mb-0">Mejora tus habilidades como streamer para brindar la mejor calidad en tus directos, o como gamer para pulir tus habilidades y dar lo mejor de ti en cada torneo.</p>
-              <button type="button">Más Información</button>
+              <a href="https://www.youtube.com" target="_blank"><button type="button">Más Información</button></a>
             </div>
           </div>
         </div>
@@ -145,12 +145,12 @@
         <div class="row pt-3">
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Aaron.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="#Nosotros">Aaron M.</a> </h2>
+            <h2><a href="https://www.youtube.com/watch?v=QrUF_JXJeu4#t=0s" target="_blank">Aaron M.</a> </h2>
           </div>
           <div class="col-lg-4 text-center"></div><!-- /.col-lg-4 -->
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Miriam.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="#Nosotros">Miriam M.</a> </h2>
+            <h2><a href="https://www.youtube.com/watch?v=QrUF_JXJeu4#t=5m8s" target="_blank">Miriam M.</a> </h2>
           </div>
         </div>
 
@@ -158,7 +158,7 @@
           <div class="col-lg-4 text-center"></div>
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Wilfredo.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="#Nosotros">Wilfredo F.</a> </h2>
+            <h2><a href="https://www.youtube.com/watch?v=QrUF_JXJeu4#t=7m9s" target="_blank">Wilfredo F.</a> </h2>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4 text-center"></div>
         </div>
@@ -167,13 +167,13 @@
         <div class="row">
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Damian.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="#Nosotros">Airton D.</a> </h2>
+            <h2><a href="https://www.youtube.com/watch?v=QrUF_JXJeu4#t=3m12s" target="_blank">Airton D.</a> </h2>
           </div>
           <div class="col-lg-4 text-center">
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4 text-center">
             <img src="img/Foto-Cristian.png" class="bd-placeholder-img rounded-circle" width="140" height="140" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-            <h2><a href="#Nosotros">Cristian M.</a> </h2>
+            <h2><a href="https://www.youtube.com/watch?v=QrUF_JXJeu4#t=8m52s" target="_blank">Cristian M.</a> </h2>
           </div>
         </div>
 
@@ -192,27 +192,31 @@
 
               <h2>Solicitar Información</h2>
 
-              <div class="mb-3 mx-auto text-start ">
-                <label for="InputNombre" class="form-label ">Nombre</label>
-                <input type="name" class="form-control " id="InputNombre">
-              </div>
+              <form action="php/enviar.php" method="post">
+                <div class="mb-3 mx-auto text-start ">
+                  <label for="InputNombre" class="form-label ">Nombre</label>
+                  <input type="name" name="name" class="form-control " id="InputNombre">
+                </div>
 
-              <div class="mb-3 mx-auto text-start">
-                <label for="InputApellido" class="form-label">Apellido</label>
-                <input type="lastname" class="form-control" id="InputApellido">
-              </div>
+                <div class="mb-3 mx-auto text-start">
+                  <label for="InputApellido" class="form-label">Apellido</label>
+                  <input type="lastname" name="lastname" class="form-control" id="InputApellido">
+                </div>
 
-              <div class="mb-3 mx-auto text-start">
-                <label for="InputCiudad" class="form-label">Ciudad</label>
-                <input type="city" class="form-control" id="InputCiudad">
-              </div>
+                <div class="mb-3 mx-auto text-start">
+                  <label for="InputCiudad" class="form-label">Ciudad</label>
+                  <input type="city" name="city" class="form-control" id="InputCiudad">
+                </div>
 
-              <div class="mb-3 mx-auto text-start">
-                <label for="InputCorreo" class="form-label">Correo</label>
-                <input type="email" class="form-control" id="InputCorreo">
-              </div>
+                <div class="mb-3 mx-auto text-start">
+                  <label for="InputCorreo" class="form-label">Correo</label>
+                  <input type="email" name="email" class="form-control" id="InputCorreo">
+                </div>
 
-              <button type="button">Enviar</button>
+                <button type="submit">Enviar</button>
+              </form>
+
+
 
             </div>
 
