--- a/index.html
+++ b/index.html
@@ -195,17 +195,17 @@
               <form action="php/enviar.php" method="post">
                 <div class="mb-3 mx-auto text-start ">
                   <label for="InputNombre" class="form-label ">Nombre</label>
-                  <input type="name" name="name" class="form-control " id="InputNombre">
+                  <input type="text" name="name" class="form-control " id="InputNombre">
                 </div>
 
                 <div class="mb-3 mx-auto text-start">
                   <label for="InputApellido" class="form-label">Apellido</label>
-                  <input type="lastname" name="lastname" class="form-control" id="InputApellido">
+                  <input type="text" name="lastname" class="form-control" id="InputApellido">
                 </div>
 
                 <div class="mb-3 mx-auto text-start">
                   <label for="InputCiudad" class="form-label">Ciudad</label>
-                  <input type="city" name="city" class="form-control" id="InputCiudad">
+                  <input type="text" name="city" class="form-control" id="InputCiudad">
                 </div>
 
                 <div class="mb-3 mx-auto text-start">
