--- a/index.html
+++ b/index.html
@@ -195,22 +195,22 @@
               <form action="php/enviar.php" method="post">
                 <div class="mb-3 mx-auto text-start ">
                   <label for="InputNombre" class="form-label ">Nombre</label>
-                  <input type="text" name="name" class="form-control " id="InputNombre">
+                  <input type="text" name="name" class="form-control " id="InputNombre" required>
                 </div>
 
                 <div class="mb-3 mx-auto text-start">
                   <label for="InputApellido" class="form-label">Apellido</label>
-                  <input type="text" name="lastname" class="form-control" id="InputApellido">
+                  <input type="text" name="lastname" class="form-control" id="InputApellido" required>
                 </div>
 
                 <div class="mb-3 mx-auto text-start">
                   <label for="InputCiudad" class="form-label">Ciudad</label>
-                  <input type="text" name="city" class="form-control" id="InputCiudad">
+                  <input type="text" name="city" class="form-control" id="InputCiudad" required>
                 </div>
 
                 <div class="mb-3 mx-auto text-start">
                   <label for="InputCorreo" class="form-label">Correo</label>
-                  <input type="email" name="email" class="form-control" id="InputCorreo">
+                  <input type="email" name="email" class="form-control" id="InputCorreo" required>
                 </div>
 
                 <button type="submit">Enviar</button>
